noinst_LTLIBRARIES	= libyajl.la
libyajl_la_SOURCES	= api/yajl_common.h api/yajl_gen.h api/yajl_parse.h api/yajl_tree.h    \
                          api/yajl_version.h yajl_alloc.c yajl_buf.c yajl_bytestack.h          \
                          yajl_encode.c yajl_gen.c yajl_lex.h yajl_parser.h yajl_version.c     \
                          yajl_alloc.h yajl_buf.h yajl.c yajl_encode.h yajl_lex.c              \
                          yajl_parser.c
